<resources>
    <string name="app_name">Covid_Data</string>
    <string name="follow_a_new_country">Follow a new country</string>
    <string name="country">Country</string>
    <string name="enter_date">Enter date</string>
    <string name="my_covid_follow_data">My Covid follow data</string>
    <string name="menu">Menu</string>
    <string name="update_date">Update date</string>
    <string name="description_country">description_country</string>
    <string name="welcome_our_covid_data_app">Welcome our Covid Data App !</string>
    <string name="this_application_is_the_result_of_the_lab_5_n_of_two_pwr_students_n_25160_and_256991">This application is the result of the lab 5 \n of two Pwr students : \n 25160 and 256991</string>
    <string name="barrier_gesture_info">Barrier Gesture Info</string>

    // Recap for one country
    <string name="name_of_the_country">Name of the Country</string>
    <string name="number_of_new_cases">Number of new cases</string>
    <string name="number_of_new_deaths">Number of new deaths</string>
    <string name="number_of_new_recovered">Number of new recovered</string>
    <string name="total_number_of_recovered">Total number of recovered</string>
    <string name="total_number_of_deaths">Total number of deaths</string>
    <string name="total_number_of_cases">Total number of cases</string>


    <string name="barrier_gesture_link">https://www.institutfrancais.com/en/close-up/information-coronavirus-covid-19</string>
    <string-array name="country_names">
        <item>france</item>
        <item>Portugal</item>
    </string-array>

    <string-array name="country_codes">
        <item>ad</item>
        <item>ae</item>
        <item>af</item>
        <item>ag</item>
        <item>ai</item>
        <item>al</item>
        <item>am</item>
        <item>ao</item>
        <item>ar</item>
        <item>at</item>
        <item>au</item>
        <item>ax</item>
        <item>az</item>
        <item>ba</item>
        <item>bb</item>
        <item>bd</item>
        <item>be</item>
        <item>bf</item>
        <item>bg</item>
        <item>bh</item>
        <item>bi</item>
        <item>bj</item>
        <item>bm</item>
        <item>bn</item>
        <item>bo</item>
        <item>br</item>
        <item>bs</item>
        <item>bt</item>
        <item>bw</item>
        <item>bz</item>
        <item>ca</item>
        <item>caf</item>
        <item>cas</item>
        <item>cd</item>
        <item>ceu</item>
        <item>cf</item>
        <item>cg</item>
        <item>ch</item>
        <item>ci</item>
        <item>cl</item>
        <item>cm</item>
        <item>cn</item>
        <item>cna</item>
        <item>co</item>
        <item>coc</item>
        <item>cr</item>
        <item>csa</item>
        <item>cv</item>
        <item>cy</item>
        <item>cz</item>
        <item>de</item>
        <item>dj</item>
        <item>dk</item>
        <item>dm</item>
        <item>dz</item>
        <item>ec</item>
        <item>ee</item>
        <item>eg</item>
        <item>er</item>
        <item>es</item>
        <item>et</item>
        <item>eu</item>
        <item>fi</item>
        <item>fj</item>
        <item>fm</item>
        <item>fr</item>
        <item>ga</item>
        <item>gb</item>
        <item>gd</item>
        <item>ge</item>
        <item>gh</item>
        <item>gm</item>
        <item>gn</item>
        <item>gq</item>
        <item>gr</item>
        <item>gt</item>
        <item>gw</item>
        <item>gy</item>
        <item>hk</item>
        <item>hn</item>
        <item>hr</item>
        <item>ht</item>
        <item>hu</item>
        <item>id</item>
        <item>ie</item>
        <item>il</item>
        <item>in</item>
        <item>iq</item>
        <item>ir</item>
        <item>is</item>
        <item>it</item>
        <item>jm</item>
        <item>jo</item>
        <item>kp</item>
        <item>ke</item>
        <item>kg</item>
        <item>kh</item>
        <item>km</item>
        <item>kn</item>
        <item>kp</item>
        <item>kr</item>
        <item>kw</item>
        <item>ky</item>
        <item>kz</item>
        <item>la</item>
        <item>lb</item>
        <item>lc</item>
        <item>li</item>
        <item>lk</item>
        <item>lr</item>
        <item>ls</item>
        <item>lt</item>
        <item>lu</item>
        <item>lv</item>
        <item>ly</item>
        <item>ma</item>
        <item>mc</item>
        <item>md</item>
        <item>me</item>
        <item>mg</item>
        <item>mk</item>
        <item>ml</item>
        <item>mm</item>
        <item>mn</item>
        <item>mo</item>
        <item>mr</item>
        <item>ms</item>
        <item>mt</item>
        <item>mu</item>
        <item>mv</item>
        <item>mw</item>
        <item>mx</item>
        <item>my</item>
        <item>mz</item>
        <item>na</item>
        <item>ne</item>
        <item>ng</item>
        <item>ni</item>
        <item>nl</item>
        <item>no</item>
        <item>np</item>
        <item>np</item>
        <item>nz</item>
        <item>om</item>
        <item>pa</item>
        <item>pe</item>
        <item>pg</item>
        <item>ph</item>
        <item>pk</item>
        <item>pl</item>
        <item>pr</item>
        <item>pt</item>
        <item>pw</item>
        <item>py</item>
        <item>qa</item>
        <item>ro</item>
        <item>rs</item>
        <item>ru</item>
        <item>rw</item>
        <item>sa</item>
        <item>sb</item>
        <item>sc</item>
        <item>sd</item>
        <item>se</item>
        <item>sg</item>
        <item>si</item>
        <item>sl</item>
        <item>sm</item>
        <item>sn</item>
        <item>so</item>
        <item>sr</item>
        <item>st</item>
        <item>sv</item>
        <item>sy</item>
        <item>sz</item>
        <item>tc</item>
        <item>td</item>
        <item>tg</item>
        <item>th</item>
        <item>tj</item>
        <item>tl</item>
        <item>tm</item>
        <item>tn</item>
        <item>to</item>
        <item>tr</item>
        <item>tt</item>
        <item>tw</item>
        <item>tz</item>
        <item>ua</item>
        <item>ug</item>
        <item>us</item>
        <item>uy</item>
        <item>uz</item>
        <item>vc</item>
        <item>ve</item>
        <item>vg</item>
        <item>vn</item>
        <item>ws</item>
        <item>ww</item>
        <item>ye</item>
        <item>za</item>
        <item>zw</item>

    </string-array>

</resources>
