<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="140dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/new_country_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="72dp"
        android:layout_toEndOf="@+id/menu_button"
        android:layout_toRightOf="@+id/menu_button"
        android:gravity="center"
        android:text="@string/follow_a_new_country" />

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="131dp"
        android:layout_height="37dp"
        android:layout_above="@+id/menu_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="25dp"
        android:completionThreshold="0"
        android:hint="@string/country" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/country_spinner"
        android:layout_alignLeft="@id/country_spinner"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="9dp"
        android:text="@string/menu" />


</RelativeLayout>

